[project]
name = "ExpanseOverseer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.13,<3.14"

dependencies = [
	"asyncpg",
	"dynaconf",
	"pydantic",
	"SQLAlchemy[asyncio]",
	"python-json-logger",
	"httpx",
	"alembic",
	"psycopg2-binary",
	"aiogram",
	#	"pillow",
	#	"plotly",
	#	"pandas",
	#	"kaleido",
]


[project.optional-dependencies]
dev = [
    "mock>=4.0.3",
    "pytest>=3.4",
    "pytest-asyncio>=0.26.0",
    "coverage>=7.8.0",
    "freezegun>=1.5.5",
    "ruff>=0.12.11",
    "black==25.9.0"
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"
explicit = true


